<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:padding="16dp"
   >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/set_alarm_input_date"
            android:hint="@string/inputDate"
            android:textSize="32sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            app:met_singleLineEllipsis="true"
            app:met_iconLeft="@drawable/ic_menu_month"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/set_alarm_input_time"
            android:hint="@string/inputTime"
            android:textSize="32sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            app:met_singleLineEllipsis="true"
            app:met_iconLeft="@drawable/ic_menu_recent_history"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/set_alarm_input_memo"
                android:hint="@string/请输入提示"
                android:textSize="32sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_baseColor="@color/white"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="?colorAccent"
                app:met_singleLineEllipsis="true"
                app:met_iconLeft="@drawable/ic_menu_edit"
                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>



        </LinearLayout>
    </LinearLayout>




</RelativeLayout>
