<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_transparent">

        <LinearLayout
            android:id="@+id/ll_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#ffffff"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#ffffff" />

            <LinearLayout
                android:id="@+id/item_popupWindows_camera"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/ic_menu_camera" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:background="@null"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="16dp"
                    android:text="@string/item_popupWindow_camera"
                    android:textColor="#585858"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/item_popupWindows_Photo"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/ic_menu_gallery" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:background="@null"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="16dp"
                    android:text="@string/item_popupWindow_take_photo_from_album"
                    android:textColor="#585858"
                    android:textSize="18sp"  />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_popupWindows_cancel"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="43dp">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/ic_menu_revert" />



                <Button
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:background="@null"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="16dp"
                    android:text="@string/item_popupWindow_cancel"
                    android:textColor="#585858"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

